focused panel headers no longer jump on mouse hover

--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -19,9 +19,10 @@
             }
 
             a {
+              border: 2px solid var(--tw-gray-800) !important;
               &:focus {
                 box-shadow: none;
-                border: 2px solid var(--tw-purple-500);
+                border: 2px solid var(--tw-purple-500) !important;
               }
             }
           }
@@ -33,9 +34,10 @@
               color: var(--tw-orange-400);
             }
             a {
+              border: 2px solid var(--tw-gray-800) !important;
               &:focus {
                 box-shadow: none;
-                border: 2px solid var(--tw-orange-500);
+                border: 2px solid var(--tw-orange-500) !important;
               }
             }
           }
@@ -47,9 +49,10 @@
               color: var(--tw-pink-400);
             }
             a {
+              border: 2px solid var(--tw-gray-800) !important;
               &:focus {
                 box-shadow: none;
-                border: 2px solid var(--tw-pink-500);
+                border: 2px solid var(--tw-pink-500) !important;
               }
             }
           }
